 cnp-allow-only-kibana-elastic-connections-km4lmx4.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-only-kibana-elastic-connections-s9ryg6o
  namespace: default
spec:
  description: "Allow kibana to only connect to elastic search"
  endpointSelector:
    matchLabels:
      controller-revision-hash: elasticsearch-master-78777c797c
      release: elasticsearch
      statefulset.kubernetes.io/pod-name: elasticsearch-master-0
      app: elasticsearch-master
      chart: elasticsearch
  egress:
  - toEndpoints:
    - matchLabels:
        app: elasticsearch
